--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,6 +109,7 @@ services:
   mailhog:
     container_name: ${PROJECT_NAME}_mailhog
     image: mailhog/mailhog
+    platform: linux/amd64
     ports:
       - "1025:1025"
       - "8025:8025"
